Fixed email_to_db.py bugs with the new structure

--- a/etc/vt_example.ini
+++ b/etc/vt_example.ini
@@ -9,6 +9,7 @@ api_local =
 sqlite_db = /path/to/dev/hunting/vtmis.sqlite3
 incoming_emails = /path/to/dev/hunting/incoming/
 processed_emails = /path/to/dev/hunting/email/
+failed_emails = /path/to/dev/hunting/failed/
 raw_msgs = /path/to/dev/hunting/raw_msgs/
 hashes = /path/to/dev/hashes/
 downloads = /path/to/dev/malware_downloads/
