Added a quick change to the logging example file.

--- a/etc/logging_example.ini
+++ b/etc/logging_example.ini
@@ -11,6 +11,12 @@ keys=base
 level=DEBUG
 handlers=console,file
 
+[logger_processDownloads]
+level=DEBUG
+handlers=console,file
+qualname=processDownloads
+propagate=0
+
 [handler_console]
 class=lib.ansistrm.ColorizingStreamHandler
 level=DEBUG
