Added a script to collect and store the entire distribution feed from VT.

--- a/etc/vt_example.ini
+++ b/etc/vt_example.ini
@@ -3,6 +3,8 @@
 api_master = 
 ; Your individual API key
 api_local = 
+; The limit for the number of results to pull from the distribution feed
+limit = 1000
 
 [locations]
 ; Locations for various things
