Separated collect_distribution logging from regular.

--- a/etc/logging_example.ini
+++ b/etc/logging_example.ini
@@ -2,7 +2,7 @@
 keys=root
 
 [handlers]
-keys=console,file
+keys=console,file,distcoll
 
 [formatters]
 keys=base
@@ -17,6 +17,12 @@ handlers=console,file
 qualname=processDownloads
 propagate=0
 
+[logger_collectDistribution]
+level=DEBUG
+handlers=console,distcoll
+qualname=collectDistribution
+propagate=0
+
 [handler_console]
 class=lib.ansistrm.ColorizingStreamHandler
 level=DEBUG
@@ -28,6 +34,12 @@ class=logging.FileHandler
 level=DEBUG
 formatter=base
 args=("log/vt.log",)
+
+[handler_distcoll]
+class=logging.FileHandler
+level=INFO
+formatter=base
+args=("log/vt_dist.log",)
 
 [formatter_base]
 format=[%(asctime)s] [%(filename)s:%(lineno)d] [%(threadName)s] [%(levelname)s] - %(message)s
